--- a/index.html
+++ b/index.html
@@ -36,88 +36,104 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="pull-right nav navbar-nav">
-            <li><a class="btn btn-default" href="#about" role="button">Who am I</a></li>
-            <li><a class="btn btn-default" href="#my-work" role="button">My work</a></li>
-            <li><a class="btn btn-default" href="#contact-me" role="button">Contact me</a></li>
+            <li><a class="btn btn-default" href="#about" role="button">About</a></li>
+            <li><a class="btn btn-default" href="#project" role="button">Project</a></li>
+            <li><a class="btn btn-default" href="#contact-me" role="button">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+    
+    <!-- Who am I -->
+    <div class="container" id="about">
+      <div class="row">
+        <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+          <img src="img/my-avatar.png" class="img-responsive center-block" alt="">
+        </div>
+      <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
+        <h1>Charile</h1>
+        <h3>Web Developer</h3>
+          <table class="table table-striped table-hover">
+            <tr>
+              <td>Work Experience</td>
+              <td>1 years of Internship </td>
+            </tr>
+            <tr>
+              <td>Development Skills</td>
+              <td>HTML, CSS, JavaScript, Ruby on Rails, GCP</td>
+            </tr>
+            <tr>
+              <td>Education</td>
+              <td>
+                Full Stack Developer, Alpha Camp, 2018
+                <br>
+                Electronic Engineering, MING CHI University of Technology, 2018
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
 
-    <div id="content">
-      <div class="container">
-        <div id="about">
-          <div id="my-avatar">
-            <img src="img/my-avatar.png" alt="my avatar">
-          </div>
-          <div id="my-info">
-            <h1>I am Ch.Myra</h1>
-            <h3>Developer and startup entrepreneur</h3>
-            <hr>
-            <table>
-              <tr>
-                <th>Birth</th>
-                <td>1986</th>
-              </tr>
-              <tr>
-                <th>工作經驗</th>
-                <td>> 3 年，金融領域、網站開發、創業</td>
-              </tr>
-              <tr>
-                <th>開發技能</th>
-                <td>HTML, CSS, JavaScript, Ruby on Rails, MySQL, GCP</td>
-              </tr>
-              <tr>
-                <th>學習經歷</th>
-                <td>
-                  大航道計劃結業, 2018<br>
-                  ALPHA 大學結業, 2017
-                </td>
-              </tr>
-            </table>
-          </div>
-        </div>
         <hr class="bar">
-        <div id="my-work">
-          <h1>This is My Work</h1>
-          <div id="my-work-gallery">
-            <div class="item">
-              <img src="http://lorempixel.com/300/300/city/1/" alt="My Personal Site">
-              <div class="item-info">
-                <h3>我的個人網站</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, rerum.</p>
-              </div>
+    <!-- My Work -->
+    <h1 class="text-center" id="project">Project</h1>
+    <div class="container">
+      <div class="row">
+
+        <div class="my-project col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/Gradute.png" class="img-responsive center-block" alt="Personal Web Site">
+          <a href="https://github.com/Loserbirdman5566/Html-CSS-Personal_website">
+            <div class="project-info col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <h3>Personal Web Site App</h3>
+              <p>Bootstrap RWD website</p>
             </div>
-            <div class="item">
-              <img src="http://lorempixel.com/300/300/city/2/" alt="My Personal Site">
-              <div class="item-info">
-                <h3>我的待辦清單</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, rerum.</p>
-              </div>
-            </div>
-            <div class="item">
-              <img src="http://lorempixel.com/300/300/city/3/" alt="My Personal Site">
-              <div class="item-info">
-                <h3>我的美食論壇</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, rerum.</p>
-              </div>
-            </div>
-            <div class="item">
-              <img src="http://lorempixel.com/300/300/city/4/" alt="My Personal Site">
-              <div class="item-info">
-                <h3>我的社群平台</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, rerum.</p>
-              </div>
-            </div>
-            <div class="item">
-              <img src="http://lorempixel.com/300/300/city/5/" alt="My Personal Site">
-              <div class="item-info">
-                <h3>我的商務網站</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, rerum.</p>
-              </div>
-            </div>
-          </div>
+          </a>
         </div>
+
+        <div class="my-project col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/to-do-list.png" class="img-responsive center-block" alt="">
+          <a href="https://github.com/Loserbirdman5566/To-Do-List">
+            <div class="project-info col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <h3>To Do List Web App</h3>
+              <p>MVC Rails app-Check box data save into database immediately when checking</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="my-project col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/restaurant.png" class="img-responsive center-block" alt="">
+          <a href="https://github.com/Loserbirdman5566/restaurant_forum">
+            <div class="project-info col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <h3>Restaurant Forum Web App</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ea sunt molestias placeat voluptates quas neque doloribus dolores, possimus odio deserunt deleniti, nam illum exercitationem! Repudiandae totam esse debitis eos.</p>
+            </div>
+          </a>          
+        </div>
+
+        <div class="my-project col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/lorem.jpeg" class="img-responsive center-block" alt="">
+          <a href="https://github.com/Loserbirdman5566/To-Do-List">
+            <div class="project-info col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <h3>Twitter Website App</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit fugiat dicta possimus necessitatibus dolor pariatur sunt. Accusantium, veniam? Beatae dolorum, nulla tempore in ullam quae quas quos recusandae, necessitatibus explicabo?</p>
+            </div>
+          </a>          
+        </div>
+
+        <div class="my-project col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/lorem.jpeg" class="img-responsive center-block" alt="">
+          <a href="https://github.com/Loserbirdman5566/To-Do-List">
+            <div class="project-info col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <h3>E-commerce website App</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit fugiat dicta possimus necessitatibus dolor pariatur sunt. Accusantium, veniam? Beatae dolorum, nulla tempore in ullam quae quas quos recusandae, necessitatibus explicabo?</p>
+            </div>
+          </a>          
+        </div>
+
+      </div>
+    </div>
+
         <hr class="bar">
         <div id="contact-me">
           <h1>Contact me</h1>
